2008-10-07  Sven Herzberg  <sven@imendio.com>

	Implemented the DhAssistantView type (with blind type prototypes)

	* src/dh-assistant-view.c,
	* src/dh-assistant-view.h: implement DhAssistantView; put the struct
	definitions into the .c file so we don't have to include webkit in the
	header
	* src/dh-assistant.c: use the new DhAssistantView instead of a plain
	WebKitWebView

2008-10-07  Sven Herzberg  <sven@imendio.com>

	Added source files for the assistant view

	* src/Makefile.am: distribute and compile the new sources; install the
	header
	* src/dh-assistant-view.c,
	* src/dh-assistant-view.h: new skeleton files

2008-10-08  Richard Hult  <richard@imendio.com>

	* src/dh-parser.c: (dh_parser_read_file): Remove unnecessary
	checks.

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.c: (dh_keyword_model_set_words): A bit
	bigger commit than I wanted... Split out the actual searching to
	make the code a little clearer. Remove the last remains of the old
	book/page searching, and move out allocating/freeing the search
	terms from the inner search loop. Only check for one exact hit..

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.c: Whitespace and comment fixes.

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.c: (keyword_model_get_iter),
	(keyword_model_iter_n_children), (dh_keyword_model_filter): No
	need to go through the hit list constantly in the tree model
	implementation, just keep the result that we already have after
	updating the list.

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/Makefile.am: The assistant is now used by DhBase so move it
	to the library.

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.c: Use G_DEFINE_TYPE_WITH_CODE instead of
	doing by hand.

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.h: Whitespace cleanup.

2008-10-06  Richard Hult  <richard@imendio.com>
